@@ -110,3 +110,13 @@ public class TranquilMind : ModSkill {
 		Skill_Type = SkillTypeID.Skill_Stats;
 	}
 }
+public class Weaken : ModSkill {
+	public override void SetDefault() {
+		Skill_EnergyRequire = 400;
+		Skill_Duration = ModUtils.ToSecond(4);
+		Skill_Type = SkillTypeID.Skill_Stats;
+	}
+	public override void Update(Player player, SkillHandlePlayer skillplayer) {
+		skillplayer.skilldamage -= .5f;
+	}
+}
